Fix, logcat scan would not execute because of path problem